# jtstats-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tutorial.py
.github/workflows/: mac-os-test.yml  test.yml
jtspy/: __init__.py  analysis.py  geo.py  imd.py  jts.py  plot.py
jtspy/Data/: jts_tables.csv
tests/: test_jts.py
